# basketball-analysis-yolo

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
ball_aquisition/: __init__.py  ball_aquisition_detector.py
docs/: bbox_cheat_sheet.md  bbox_visual_guide.md
drawers/: __init__.py  _utils.py  ball_track_drawers.py  player_tracks_drawers.py
examples/: bbox_demo.py
notebooks/: Basket_ball_detection_training.ipynb  player_detection_training.ipynb
team_assigner/: __init__.py  team_assigner.py
trackers/: __init__.py  ball_tracker.py  player_tracker.py
utils/: __init__.py  bbox.py  bbox_utils.py  stubs.py  utils.py
